--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+    <% flash.each do |name, msg| %>
+    <ul>
+      <il>
+        <%= msg %>
+      </il>
+    </ul>
+    <% end %>
     <%= yield %>
   </body>
 </html>
