index et edit up

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Création d'une nouvelle étape</h1>
+<h1>Edition d'un étape</h1>
 
 <% if @article.errors.any? %>
 <h2>Erreur a cause des erreurs suivantes:</h2>
