--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @article.title %></h1>
 
-<p> <%= @article.description %></p>
+<p><%= @article.description %></p>
+
+<%= link_to "Retour à la liste", articles_path %> |
+<%= link_to "Editer l'étape", edit_article_path(@article) %>
