--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,9 @@
   </head>
 
   <body>
-    <% flash.each do |name, msg| %>
-    <ul>
-      <il>
-        <%= msg %>
-      </il>
-    </ul>
-    <% end %>
+    
+    <%= render 'layouts/flash' %>
+    
     <%= yield %>
   </body>
 </html>
