--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -49,4 +49,5 @@
   </body>
 </html>
 
-<%= link_to 'about', about_path %>
+<%= link_to 'about', about_path %> |
+<%= link_to 'etapes', articles_path %>
