--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,7 +13,8 @@
             <td><%= article.title %></td>
             <td><%= article.description %></td>
             <td><%= link_to "Editer", edit_article_path(article) %></td>
-            <td><%= link_to "afficher", article_path(article) %></td>
+            <td><%= link_to "Afficher", article_path(article) %></td>
+            <td><%= link_to "Supprimer", article_path(article), method: :delete %></td>
         </tr>
     
     
