--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,13 +9,14 @@
     border: 1px solid black;
   }
   </style>
-  <body style="background-image: url ('Macintosh HD/Utilisateur/nishizaoryunaga/telechargement/the.jpg')">
-    <p>
-    </p>
-    <h1 align="center">budha bowl</h1><br />
-    <p align="center">
-    	<img src="https://www.atelierdeschefs.com/media/recette-d29403-buddha-bowl.jpg" alt="bowl" width="800" height="200">
-    </p>
+  <body>
+<div class="center container">
+  <div class="jumbotron">
+  <h1>Alpha blog</h1>
+  <p>Bienvenue sur Alpha blog, le blog des recettes du monde</p>
+  <p><%= link_to "s'inscrire", "#", class: "btn btn-success btn-lg" %></p>
+  </div>
+</div>  
     <table style="width:100%">
       <tr>
         <th>Les ingrédients</th>
