--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Liste des étapes</h1>
+<h1 class="col-sm-offset-2">Liste des étapes</h1>
 <p>
 <%= link_to "créer nouvelle étape", new_article_path %>
 </p>
