--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,5 +25,28 @@ $navbar-default-bg: #009900;
 }
 
 .jumbotron {
+    background-image: asset-url('budha.jpeg') ;
+    background-size: cover;
+    margin-top: 45px ;
     color: white;
+    height: 550px;
+    
+}
+
+footer {
+    margin-top: 45px ;
+    padding-top: 5px;
+    border-top: 1px solid #009900 ;
+    
+}
+
+footer small {
+    float: left;
+    
+}
+
+footer ul {
+    float: right;
+    list-style: none;
+    
 }
