--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,26 +1,39 @@
 <% if @article.errors.any? %>
-<h2>Erreur a cause des erreurs suivantes:</h2>
+<h2>Erreur à cause des raisons suivantes:</h2>
     <ul>
     <% @article.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
         <% end %>
     </ul>
 <% end %>
-<%= form_for @article do |f| %>
 
-<p>
-    <%= f.label :Ingrédient %><br/>
-    <%= f.text_field :title %>
-</p>
-
-<p>
-    <%= f.label :Recette %><br/>
-    <%= f.text_area :description %>
-</p>
-
-<p>
-    <%= f.submit %>
-</p>
-<% end %>
-
-<%= link_to "retour à la liste", articles_path %>
+<div class= "row" >
+    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+        <div class="form-group">
+            <div class= "col-sm-2 control-label">
+                <%= f.label :Ingredient %>
+            </div>
+            <div class= "col-sm-8">
+                <%= f.text_field :title, class: "form-control", placeholder: "Nom de la recette" %>
+            </div>
+        </div>
+        <div class="form-group">
+           <div class= "col-sm-2 control-label">
+                <%= f.label :Recette %>
+            </div>
+            <div class= "col-sm-8">
+                 <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Description de la recette" %>
+            </div>
+        </div>
+        <div class="group-form">
+            <div class="col-sm-offset-2 col-sm-10">
+                <%= f.submit class: "btn btn-success"%>
+            </div>
+        </div>
+    
+    <% end %>
+</div>
+</br>
+<div class="col-sm-offset-2 col-sm-10">
+    <%= link_to "retour à la liste", articles_path %>
+</div>
