--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <%= render 'layouts/navigation' %>
     <%= render 'layouts/flash' %>
-    
     <%= yield %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
