--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -50,3 +50,12 @@ footer ul {
     list-style: none;
     
 }
+
+.article-description {
+    padding: 5px;
+}
+
+.article-actions {
+    float: left;
+}
+
