--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,6 +1,17 @@
-<h1><%= @article.title %></h1>
-
-<p><%= @article.description %></p>
-
-<%= link_to "Retour à la liste", articles_path %> |
-<%= link_to "Editer l'étape", edit_article_path(@article) %>
+<div class="row">
+    <div class="col-xs-offset-2">
+        <h2><%= @article.title %></h2>
+    </div>    
+    <div class="well col-xs-8 col-xs-offset-2">
+        <div class="article-description">
+                <%= @article.description %>
+        </div>
+    </div>
+    <div class="article-actions">
+        <div class="col-xs-offset-6 col-xs-12">
+            <%= link_to "Editer l'étape", edit_article_path(@article), class: "btn btn-xs btn-success" %>
+            <%= link_to "Supprimer la recette", articles_path(@article), method: :delete, class: "btn btn-xs btn-danger" %>
+            <%= link_to "Retour à la liste", articles_path, class: "btn btn-xs btn-primary" %>
+        </div>    
+    </div>
+</div>
