--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,14 +9,15 @@
     border: 1px solid black;
   }
   </style>
-  <body style="background-image: url ('Macintosh HD/Utilisateur/nishizaoryunaga/telechargement/the.jpg')">
+  <body>
     <p>
     </p>
     <h1 align="center">budha bowl</h1><br />
     <p align="center">
     	<img src="https://www.atelierdeschefs.com/media/recette-d29403-buddha-bowl.jpg" alt="bowl" width="800" height="200">
     </p>
-    <table style="width:100%">
+    <div class="col-xs-8 col-xs-offset-2">  
+    <table class="table table-bordered">
       <tr>
         <th>Les ingrédients</th>
         <th>La recette</th>
@@ -44,9 +45,6 @@
           <td></td>
           <td>Mettre le riz en bas du bol puis rajouter les légumes, rajouter le jus d'un demie citron vert</td>
         </tr>
-     </table>   
-    
+    </table>   
   </body>
 </html>
-
-<%= link_to 'home', root_path %>
