--- a/app/views/articles/_formu.html.erb
+++ b/app/views/articles/_formu.html.erb
@@ -1,17 +1,10 @@
-<% if @article.errors.any? %>
-<h2>Erreur à cause des raisons suivantes:</h2>
-    <ul>
-    <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-        <% end %>
-    </ul>
-<% end %>
+<%= render 'shared/errors', obj: @article %>
 
 <div class= "row" >
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
         <div class="form-group">
             <div class= "col-sm-2 control-label">
-                <%= f.label :Ingredient %>
+                <%= f.label :Recette %>
             </div>
             <div class= "col-sm-8">
                 <%= f.text_field :title, class: "form-control", placeholder: "Nom de la recette" %>
@@ -19,15 +12,21 @@
         </div>
         <div class="form-group">
            <div class= "col-sm-2 control-label">
-                <%= f.label :Recette %>
+                <%= f.label :Ingredient %>
             </div>
             <div class= "col-sm-8">
-                 <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Description de la recette" %>
+                 <%= f.text_area :description, class: "form-control", placeholder: "Description de la recette" %>
             </div>
         </div>
+        <div class="form-group">
+            <div class="col-sm-2 control-label">
+                <%= f.label :Etapes %>
+            </div> 
+            
+        </div>    
         <div class="group-form">
             <div class="col-sm-offset-2 col-sm-10">
-                <%= f.submit class: "btn btn-success"%>
+                <input class="btn btn-success" type="submit" value="Créer">
             </div>
         </div>
     
