--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,23 +1,26 @@
-<h1 class="col-sm-offset-2">Liste des étapes</h1>
-<p>
-<%= link_to "créer nouvelle étape", new_article_path %>
-</p>
-<table>
-    <tr>
-        <th>Ingredients</th>
-        <th>Recette</th>
-    </tr>
-    
-    <% @articles.each do |article| %>
-        <tr>
-            <td><%= article.title %></td>
-            <td><%= article.description %></td>
-            <td><%= link_to "Editer", edit_article_path(article) %></td>
-            <td><%= link_to "Afficher", article_path(article) %></td>
-            <td><%= link_to "Supprimer", article_path(article), method: :delete %></td>
-        </tr>
-    
-    
-    <% end %>
-    
-</table>
+<div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+        <h2>Liste des étapes</h2>
+        <p><%= link_to "créer nouvelle recette", new_article_path, class: "btn btn-xs btn-primary" %></p>
+        <table class= "table">
+            <thead>
+               <tr>
+                    <th>Recette</th>
+                    <th>Ingredients</th>
+                    <th>Actions</th>
+                </tr> 
+            </thead>
+            
+            <% @articles.each do |article| %>
+            <tr>
+                <td><%= link_to article.title, article_path(article) %></td>
+                <td><%= article.description %></td>
+                <td><%= link_to "Editer", edit_article_path(article), class: "btn btn-xs btn-success" %></td>
+                <td><%= link_to "Supprimer", articles_path(article), method: :delete, class: "btn btn-xs btn-danger" %></td>
+            </tr>
+            <% end %>
+        </table>
+    </div>     
+</div>
+        
+
