--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,3 +1,3 @@
-<h1 class="col-sm-offset-2">Création d'une nouvelle étape</h1>
+<h1 class="col-sm-offset-2">Création d'une recette</h1>
 
-<%= render 'form' %>
+<%= render 'formn' %>
