--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,7 +31,7 @@
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Rechercher">
         </div>
-        <button type="submit" class="btn btn-default">Envoyer</button>
+        <button type="submit" class="btn btn-success">Envoyer</button>
       </form>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
